--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
 <body>
     <div class="topnav" id="myTopnav">
-        <a href="#home" class="active">Home</a>
-        <a href="#news">News</a>
+        <a href="https://penguin-number-123.github.io/" class="active">Home</a>
+        <a href="#news">Numbers</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon" onclick="Responsive()">
           <i class="fa fa-bars"></i>
         </a>
       </div>
@@ -19,7 +19,7 @@
 <p>\(10^{100}\)</p>
 </body>
 <script>
-    function myFunction() {
+    function Responsive() {
       var x = document.getElementById("myTopnav");
       if (x.className === "topnav") {
         x.className += " responsive";
