--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <div class="topnav" id="myTopnav">
         <a href="https://penguin-number-123.github.io/" class="active">Home</a>
-        <a href="#news">Numbers</a>
-        <a href="#contact">Test</a>
+        <a href="https://penguin-number-123.github.io/Numbers/">Numbers</a>
+        <a href="#contact">Notations & functions</a>
         <a href="#about">Test2</a>
         <a href="javascript:void(0);" class="icon" onclick="Responsive()">
           <i class="fa fa-bars"></i>
