--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <i class="fa fa-bars"></i>
         </a>
       </div>
-<h1>Hello World</h1>
+<h1>Big numbers!</h1>
 <p>Mathjax test</p>
 <p>\(10^{100}\)</p>
 </body>
