--- a/Numbers/index.html
+++ b/Numbers/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="D:\Mumuji\Documents\GitHub\penguin-number-123.github.io\Style.css">
+    <link rel="stylesheet" href="../Style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <body>
