--- a/NotationFunctions/index.html
+++ b/NotationFunctions/index.html
@@ -13,7 +13,7 @@
               <i class="fa fa-bars"></i>
             </a>
           </div>
-        <h1>This is a list of my numbers</h1>
+        <h1>This is a list of my notations and functions!</h1>
         <h2></h2>
         
     </body>
