--- a/NotationsFunctions/index.html
+++ b/NotationsFunctions/index.html
@@ -7,14 +7,14 @@
         <div class="topnav" id="myTopnav">
             <a href="https://penguin-number-123.github.io/" class="active">Home</a>
             <a href="https://penguin-number-123.github.io/Numbers/">Numbers</a>
-            <a href="https://penguin-number-123.github.io/NotationsFunctions">Notations & functions</a>
+            <a href=v>Notations & functions</a>
             <a href="#about">Test2</a>
             <a href="javascript:void(0);" class="icon" onclick="Responsive()">
               <i class="fa fa-bars"></i>
             </a>
           </div>
         <h1>This is a list of my notations and functions!</h1>
-        <h2></h2>
+        <h2><a href = "https://penguin-number-123.github.io/NotationsFunctions/EXAT.html">Extended @ notation!</a></h2>
         
     </body>
     <script>
