--- a/Numbers/Omegaggol.html
+++ b/Numbers/Omegaggol.html
@@ -21,6 +21,8 @@
         <br />
         Finally, Omegaggol is \(f_{LGO}(10^{100})\)
     </p>
-    </body>
+    <footer>
+        Return to <a href ="https://penguin-number-123.github.io/Numbers/">Numbers</a>.
+    </footer>
 </body>
 </html>
