--- a/Numbers/index.html
+++ b/Numbers/index.html
@@ -14,7 +14,7 @@
             </a>
           </div>
         <h1>This is a list of my numbers</h1>
-        <h2></h2>
+        <h2><a href = "https://penguin-number-123.github.io/Numbers/Omegaggol.html">Omegaggol!</a></h2>
         
     </body>
     <script>
