--- a/Numbers/Omegaggol.html
+++ b/Numbers/Omegaggol.html
@@ -19,7 +19,7 @@
         We can now create a FIH with the base rule \(g_0(n) = \Gamma_{n^n}\) (I use g to prevent ambiguity.)<br />
         Then, the Large Gamma Ordinal is defined as \(g_{10^100}(10^{100})\) We hereafter call this the LGO. 
         <br />
-        Finally, Omegaggol is \(f_{LGO}(10^{100})\)
+        Finally, Omegaggol is \(f_{LGO}(10^{100})\) in the FGH.
     </p>
     <footer>
         Return to <a href ="https://penguin-number-123.github.io/Numbers/">Numbers</a>.
