--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -18,7 +18,7 @@
         \(g(0,0) = 1\) <br />
         \(g(0,m) = m^m\)<br />
         \(g(n,m) = [g(n-1,]^{n},m)\) if n > 1<br />
-        \([g(n]^{o},m) = g(([g(n]^{o-1},m)),m)\) if o > 1, else:<br />
+        \([g(n]^{o},m) = [g(g(n]^{o-1},m)),m)\) if o > 1, else:<br />
         \([g(n]^{o},m) = g(n,m)\) if o = 1
     </p>
     <p>
