--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -17,9 +17,9 @@
         Where the g(n,m) is defined like so: (for all n,m, they are positive whole numbers.)<br />
         \(g(0,0) = 1\) <br />
         \(g(0,m) = m^m\)<br />
-        \(g(n,m) = [g(n-1,]^{n},m)\) if n > 1<br />
-        \([g(n]^{o},m) = [g(g(n]^{o-1},m)),m)\) if o > 1, else:<br />
-        \([g(n]^{o},m) = g(n,m)\) if o = 1
+        \(g(n,m) = g(n-1,[m]^{n-1})\) if n > 1<br />
+        \(g(n,[m]^{o}) = g(n,[g(n,[m]^{o-1})]^{o-1}))\) if o > 1, else:<br />
+        \(g(n,[m]^{o}) = g(n,m)\) if o = 1
     </p>
     <p>
         \(a[1]^{c}b = f_{c-1}(a@b),f_0(n) = a[b]c\)<br />
