--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -17,7 +17,7 @@
         Where the g(n,m) is defined like so: (for all n,m, they are positive whole numbers.)<br />
         \(g(0,0) = 1\) <br />
         \(g(0,m) = m^m\)<br />
-        \(g(n,m) = g(n-1,[m]^{n-1})\) if n > 1<br />
+        \(g(n,m) = g(n-1,[m]^{n})\) if n > 1<br />
         \(g(n,[m]^{o}) = g(n,[g(n,[m]^{o-1})]^{o-1}))\) if o > 1, else:<br />
         \(g(n,[m]^{o}) = g(n,m)\) if o = 1
     </p>
@@ -35,7 +35,7 @@
         \([\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n}] = [\underbrace{x_1-1,x_2*(n-1),\cdots,x_{n-1}*(n-1),x_n*(n-1)}_{n}]\)<br />
         \([x_1,x_2,1,\underbrace{\cdots}_{n\,1s}1,x_{n-1},x_n] = \)[x_1-1,x_2*(n-1),1,\underbrace{\cdots}_{(n-1)\,1s}1,x_{n-1}*(n-1),x_n*(n-1)]\)<br />
         The * operator is defined below:
-        a*b = [\underbrace{a,a,\cdots,a,a}_{\text b copies of a, and no other term other than a.}]
+        \(a*b = [\underbrace{a,a,\cdots,a,a}_{\text b copies of a, and no other term other than a.}]\)
 
     </p>
     <footer>
