--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -33,9 +33,9 @@
         After that, I continue to extend for arrays of length n. <br />
         \([\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n},1] = [\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n}]\)<br />
         \([\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n}] = [\underbrace{x_1-1,x_2*(n-1),\cdots,x_{n-1}*(n-1),x_n*(n-1)}_{n}]\)<br />
-        \([x_1,x_2,1,\underbrace{\cdots}_{n\,1s}1,x_{n-1},x_n] = \)[x_1-1,x_2*(n-1),1,\underbrace{\cdots}_{(n-1)\,1s}1,x_{n-1}*(n-1),x_n*(n-1)]\)<br />
+        \([x_1,x_2,1,\underbrace{\cdots}_{n\,1s}1,x_{n-1},x_n] = [x_1-1,x_2*(n-1),1,\underbrace{\cdots}_{(n-1)\,1s}1,x_{n-1}*(n-1),x_n*(n-1)]\)<br />
         The * operator is defined below:
-        \(a*b = [\underbrace{a,a,\cdots,a,a}_{\text b copies of a, and no other term other than a.}]\)
+        \(a*b = [\underbrace{a,a,\cdots,a,a}_{\text {b copies of a, and no other term other than a.}}]\)
 
     </p>
     <footer>
