--- a/NotationsFunctions/index.html
+++ b/NotationsFunctions/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+   <link rel="shortcut icon" type="image/jpg" href="../istockphoto-828605644-640x640 (1).jpg">
     <link rel="stylesheet" href="../Style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -15,6 +16,8 @@
           </div>
         <h1>This is a list of my notations and functions!</h1>
         <h2><a href = "https://penguin-number-123.github.io/NotationsFunctions/EXAT.html">Extended @ notation!</a></h2>
+        <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/Hypertorial_Recursive.html">Hypertorial Recursive!</a></h2>
+        <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/Delta.html">Delta!</a></h2>
         
     </body>
     <script>
