--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
+    <link rel="shortcut icon" type="image/jpg" href="../istockphoto-828605644-640x640 (1).jpg">
     <link rel="stylesheet" href="../Style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <body>
     <h1>Extended @ notation!</h1>
     <p>(note that all terms and things used in this are in the set of Positive Whole Numbers) <br />
-        First, we define the @: a@b = \(a\uparrow^{a^b}b\) \(a@^{c}b = a@(a@^{c-1}b)\) until c is equal to one, in that case, \(a@^{c}b = a@b\)</p>
+        First, we define the @: a@b = \(a\uparrow^{a^b}b\) <br /> Then,\(a@^{c}b = a@^{c-1}(a@^{c-1}b)\) until c is equal to one, in that case, \(a@^{c}b = a@b\)</p>
     <p>Then, we introduce a shorthand for the @ notation: \(a[b]c = a@^{b}c\)</p>
     <p>I use the modified FIH, hereby I will declare it's base rule as "\(f_0(n) =\) "insert function name"</p>
     <p>Suppose a large countable ordinal such to that every finite number a satisfies a < u. A fast iteration hierarchy of functions, \(f_a:\mathbb N \rightarrow \mathbb N\)
@@ -17,7 +18,7 @@
         Where the g(n,m) is defined like so: (for all n,m, they are positive whole numbers.)<br />
         \(g(0,0) = 1\) <br />
         \(g(0,m) = m^m\)<br />
-        \(g(n,m) = g(n-1,[m]^{n})\) if n > 1<br />
+        \(g(n,m) = g(n-1,[m]^{m})\) if n > 1<br />
         \(g(n,[m]^{o}) = g(n,[g(n,[m]^{o-1})]^{o-1}))\) if o > 1, else:<br />
         \(g(n,[m]^{o}) = g(n,m)\) if o = 1
     </p>
@@ -33,7 +34,7 @@
         After that, I continue to extend for arrays of length n. <br />
         \([\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n},1] = [\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n}]\)<br />
         \([\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n}] = [\underbrace{x_1-1,x_2*(n-1),\cdots,x_{n-1}*(n-1),x_n*(n-1)}_{n}]\)<br />
-        \([x_1,x_2,1,\underbrace{\cdots}_{n\,1s}1,x_{n-1},x_n] = [x_1-1,x_2*(n-1),1,\underbrace{\cdots}_{(n-1)\,1s}1,x_{n-1}*(n-1),x_n*(n-1)]\)<br />
+        \([x_1,x_2,\underbrace{1,\cdots, 1}_{p\,1s},x_{n-1},x_n] = [x_1*(n-1),x_2*(n-1),\underbrace{1,\cdots,1}}_{(p-1)1s},x_{n-1}*(n-1),x_n*(n-1)]\)<br />
         The * operator is defined below:
         \(a*b = [\underbrace{a,a,\cdots,a,a}_{\text {b copies of a, and no other term other than a.}}]\)
 
