--- a/Numbers/Omegaggol.html
+++ b/Numbers/Omegaggol.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <link rel="shortcut icon" type="image/jpg" href="../istockphoto-828605644-640x640 (1).jpg">
     <link rel="stylesheet" href="../Style.css">
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
