--- a/NotationsFunctions/Delta.html
+++ b/NotationsFunctions/Delta.html
@@ -6,20 +6,20 @@
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 <body>
 <p>
-CB(n) or \(\delta(n)\) So, the chess board is a hypothetical Turing machine thing.
+CB(n) or \(\delta(n)\) So, the chess board is a hypothetical Turing machine thing.<br />
 
-Definition
+Definition <br />
 The maximum sum of n-1’s that can be written (in the finished plane), with n state and a n colour halting Turing machine. Note that we do not use a tape but a Plane. As well as that, we allow for movement in 8 directions. Up, down, left, right, up right, up left, down right, down left.
-
-Better Explanation
+<br />
+Better Explanation<br />
 We have a read and write head moving on the infinite paper. Instead of turning it into a 0 or 1, it turns it into 0,1,2, etc, with n-1 as the maximum number. It reads and writes, until it eventually halts. The final question, is what is the sum of all n-1s?
+<br />
+Augmented CB(n)<br />
+Also called \(\Delta(n)\) It should be more powerful. <br />
 
-Augmented CB(n)
-Also called \(\Delta(n)\) It should be more powerful. 
+Instead of asking what is the sum of all n-1s, we ask what is the sum of all numbers that are not 0.<br />
 
-Instead of asking what is the sum of all n-1s, we ask what is the sum of all numbers that are not 0.
-
-Better Definition
+Better Definition<br />
 The maximum sum of all nonzero numbers that can be written (in the finished plane), with a n state and a n colour halting Turing machine. Note that we do not use a tape but a Plane. As well as that, we allow for movement in 8 directions. Up, down, left, right, up right, up left, down right, down left.
 </p>
 <footer>
