--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -34,7 +34,7 @@
         After that, I continue to extend for arrays of length n. <br />
         \([\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n},1] = [\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n}]\)<br />
         \([\underbrace{x_1,x_2,\cdots,x_{n-1},x_n}_{n}] = [\underbrace{x_1-1,x_2*(n-1),\cdots,x_{n-1}*(n-1),x_n*(n-1)}_{n}]\)<br />
-        \([x_1,x_2,\underbrace{1,\cdots, 1}_{p\,1s},x_{n-1},x_n] = [x_1*(n-1),x_2*(n-1),\underbrace{1,\cdots,1}}_{(p-1)1s},x_{n-1}*(n-1),x_n*(n-1)]\)<br />
+        \([x_1,x_2,\underbrace{1,\cdots, 1}_{p\,1s},x_{n-1},x_n] = [x_1*(n-1),x_2*(n-1),\underbrace{1,\cdots,1}_{(p-1)1s},x_{n-1}*(n-1),x_n*(n-1)]\)<br />
         The * operator is defined below:
         \(a*b = [\underbrace{a,a,\cdots,a,a}_{\text {b copies of a, and no other term other than a.}}]\)
 
