--- a/NotationsFunctions/index.html
+++ b/NotationsFunctions/index.html
@@ -8,7 +8,7 @@
         <div class="topnav" id="myTopnav">
             <a href="https://penguin-number-123.github.io/" class="active">Home</a>
             <a href="https://penguin-number-123.github.io/Numbers/">Numbers</a>
-            <a href=v>Notations & functions</a>
+            <a href="https://penguin-number-123.github.io/NotationsFunctions">Notations & functions</a>
             <a href="#about">Test2</a>
             <a href="javascript:void(0);" class="icon" onclick="Responsive()">
               <i class="fa fa-bars"></i>
