--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <link rel="shortcut icon" type="image/jpg" href="../istockphoto-828605644-640x640 (1).jpg">
   <link rel="stylesheet" href="Style.css">
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
-   vc <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 <body>
     <div class="topnav" id="myTopnav">
