--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -16,11 +16,27 @@
         \(f_{n+1}(n) = f^{g(n,n)}(n)\) until n = 0, in which case, refer to the top rule.<br />
 
         Where the g(n,m) is defined like so: (for all n,m, they are positive whole numbers.)<br />
-        \(g(0,0) = 1\) <br />
-        \(g(0,m) = m^m\)<br />
-        \(g(n,m) = g(n-1,[m]^{m})\) if n > 1<br />
-        \(g(n,[m]^{o}) = g(n,[g(n,[m]^{o-1})]^{o-1}))\) if o > 1, else:<br />
-        \(g(n,[m]^{o}) = g(n,m)\) if o = 1
+        I define g(n,m) in the following recursive way.
+
+        \(g(n,m) = m^m\) if n = 0
+        <br />
+        \(g(n+1,m) = g(n,g(n,\{m\}^{m}_{n}))\) if n > 0.
+        <br />
+        \(\{n\}^{m+1}_{p} = \{\{n\}^{m}_{p}\}_{p}\) if m > 1
+        <br />
+        \(\{n\}^{m}_{p} = \{n\}_{p}\) if m = 1
+        <br />
+        \(\{n\}_{p+1} = g(p,g(p,\{n\}_{p}))\) if p > 1
+        <br />
+        \(\{n\}_{p} = [n]^{n}_{n}\) if p = 1
+        <br />
+        \([n]^{m+1}_{p} = [[n]^{m}_{p}]_{p}\) if m > 1
+        <br />
+        \([n]^{m}_{p} = [n]_{p}\) if m = 1
+        <br />
+        \([n]_{p+1} = [n]^{n}_{p}\) if p > 1
+        <br />
+        \([n]_{p} = n\uparrow^{n}n\) if p = 1
     </p>
     <p>
         \(a[1]^{c}b = f_{c-1}(a@b),f_0(n) = a[b]c\)<br />
