--- a/NotationsFunctions/Hypertorial_Recursive.html
+++ b/NotationsFunctions/Hypertorial_Recursive.html
@@ -9,20 +9,20 @@
             Hypertorial Recursive
         </h1>
         <p>
-            Define a!b as \(a\uparrow^{b}a-1\uparrow^{b}\cdots 2\uparrow^{b}1)
+            Define a!b as \(a\uparrow^{b}a-1\uparrow^{b}\cdots 2\uparrow^{b}1\)
             <br />
-            a![1,b] = a!b
-            a![n,b] = (a!b)!b)!b)...!b) with n !b's for n> 1
-            a![1,m,b] = a![m,b]
-            a![m,1,b] = a![m,b]
-            a![m,b,1] = a![m,b]
-            a![m,1,1] = a!m
-            a![n,m,b] = a![n-1,\(f(m),f(b)\)] , \(f(n) = n![n-1,n,n]\)
-            It's kind big??
-            3![3,3,3] = 3![2,3![2,3,3],3![2,3,3]]
-            3![2,3,3] = 3![1,3![1,3,3],3![1,3,3]]
-            3![1,3,3] = ((3!3)!3)!3
-            3!3 = \(3\uparrow^32\uparrow^{3}1)
+            a![1,b] = a!b<br />
+            a![n,b] = (a!b)!b)!b)...!b) with n !b's for n> 1<br />
+            a![1,m,b] = a![m,b]<br />
+            a![m,1,b] = a![m,b]<br />
+            a![m,b,1] = a![m,b]<br />
+            a![m,1,1] = a!m<br />
+            a![n,m,b] = a![n-1,\(f(m),f(b)\)] , \(f(n) = n![n-1,n,n]\)<br />
+            It's kind big??<br />
+            3![3,3,3] = 3![2,3![2,3,3],3![2,3,3]]<br />
+            3![2,3,3] = 3![1,3![1,3,3],3![1,3,3]]<br />
+            3![1,3,3] = ((3!3)!3)!3<br />
+            3!3 = \(3\uparrow^32\uparrow^{3}1\)
             and so on.
         </p>
     </body>
