--- a/Other/mcmonalds.html
+++ b/Other/mcmonalds.html
@@ -454,4 +454,5 @@
             Anyways, MCMONALD's number is 10<sup>6.630722 × 10<sup>29816007</sup></sup>
         </m>
     </body>
+    <footer>Return to <a href ="https://penguin-number-123.github.io/Other/">Other</a>.</footer>
 </html>
