--- a/NotationsFunctions/EXAT.html
+++ b/NotationsFunctions/EXAT.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Extended @ notation!</h1>
     <p>(note that all terms and things used in this are in the set of Positive Whole Numbers) <br />
-        First, we define the @: a@b = \(a\uparrow^{a^b}b\) <br /> Then,\(a@^{c}b = a@^{c-1}(a@^{c-1}b)\) until c is equal to one, in that case, \(a@^{c}b = a@b\)</p>
+        First, we define the @: a@b = \(a\uparrow^{a\uparrow^{a^b}b}b\) <br /> Then,\(a@^{c}b = a@^{c-1}(a@^{c-1}b)\) until c is equal to one, in that case, \(a@^{c}b = a@b\)</p>
     <p>Then, we introduce a shorthand for the @ notation: \(a[b]c = a@^{b}c\)</p>
     <p>I use the modified FIH, hereby I will declare it's base rule as "\(f_0(n) =\) "insert function name"</p>
     <p>Suppose a large countable ordinal such to that every finite number a satisfies a < u. A fast iteration hierarchy of functions, \(f_a:\mathbb N \rightarrow \mathbb N\)
