--- a/Numbers/index.html
+++ b/Numbers/index.html
@@ -16,6 +16,7 @@
           </div>
         <h1>This is a list of my numbers</h1>
         <h2><a href = "https://penguin-number-123.github.io/Numbers/Omegaggol.html">Omegaggol!</a></h2>
+        <h2><a href ="https://penguin-number-123.github.io/Numbers/atnumbers.html">List of @ numbers using a@b fomat</a></h2>
         
     </body>
     <script>
