--- a/Numbers/atnumbers.html
+++ b/Numbers/atnumbers.html
@@ -105,7 +105,8 @@
         \(99@3\) nonanonagintatri <br />
         \(100@3\) centitri
     </p>
-    <p>\(2@4\) duoquad <br />
+    <p>
+        \(2@4\) duoquad <br />
         \(3@4\) triquad <br />
         \(4@4\) quadraquad <br />
         \(5@4\) quintaquad <br />
