--- a/NotationsFunctions/Penguine.html
+++ b/NotationsFunctions/Penguine.html
@@ -54,4 +54,5 @@
         \(\left. \begin{matrix} &&xPa\underbrace{\#\cdots \#}b\\ & &xPa\underbrace{\#\cdots \#}b \\ & & \;\;\;\;\underbrace{\quad\;\; \vdots \quad \;\;}\\ & &xPa\underbrace{\# \cdots \#}b \\ & & b\quad \#'s \end{matrix} \right \} xPa\#b\) <br />
         </p>
     </body>
+    <footer>Return to <a href ="https://penguin-number-123.github.io/NotationsFunctions">Notations and Functions</a>.</footer>
 </html>
