--- a/NotationsFunctions/EXAN.html
+++ b/NotationsFunctions/EXAN.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+    <link rel="stylesheet" href="../Style.css">
+    <link rel="shortcut icon" type="image/jpg" href="../istockphoto-828605644-640x640 (1).jpg">
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <body>
         <h1>The Exam Array Notation</h1>
         <p>Background: This was defined in 25 minutes, during a break in an exam.</p>
