--- a/NotationsFunctions/index.html
+++ b/NotationsFunctions/index.html
@@ -19,6 +19,7 @@
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/Hypertorial_Recursive.html">Hypertorial Recursive!</a></h2>
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/Delta.html">Delta!</a></h2>
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/Penguine.html"><a>Penguin E</a></h2>
+        <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/AcceleratedHierarchy.html">Accelerated Hierarchy</a></h2>
         
     </body>
     <script>
