--- a/NotationsFunctions/Delta.html
+++ b/NotationsFunctions/Delta.html
@@ -9,7 +9,7 @@
 CB(n) or \(\delta(n)\) So, the chess board is a hypothetical Turing machine thing.<br />
 
 Definition <br />
-The maximum sum of n-1’s that can be written (in the finished plane), with n state and a n colour halting Turing machine. Note that we do not use a tape but a Plane. As well as that, we allow for movement in 8 directions. Up, down, left, right, up right, up left, down right, down left.
+The maximum sum of BB(n)-1’s that can be written (in the finished plane), with BB(n) state and a BB(n) colour halting Turing machine. Note that we do not use a tape but a Plane. As well as that, we allow for movement in 8 directions. Up, down, left, right, up right, up left, down right, down left.
 <br />
 Better Explanation<br />
 We have a read and write head moving on the infinite paper. Instead of turning it into a 0 or 1, it turns it into 0,1,2, etc, with n-1 as the maximum number. It reads and writes, until it eventually halts. The final question, is what is the sum of all n-1s?
@@ -20,7 +20,8 @@ Also called \(\Delta(n)\) It should be more powerful. <br />
 Instead of asking what is the sum of all n-1s, we ask what is the sum of all numbers that are not 0.<br />
 
 Better Definition<br />
-The maximum sum of all nonzero numbers that can be written (in the finished plane), with a n state and a n colour halting Turing machine. Note that we do not use a tape but a Plane. As well as that, we allow for movement in 8 directions. Up, down, left, right, up right, up left, down right, down left.
+The maximum sum of all nonzero numbers that can be written (in the finished plane), with a BB(n) state and a BB(n) colour halting Turing machine. Note that we do not use a tape but a Plane. As well as that, we allow for movement in 8 directions. Up, down, left, right, up right, up left, down right, down left.
+BB(n) is the busy beaver function.
 </p>
 <footer>
     Return to <a href = "https://penguin-number-123.github.io/NotationsFunctions">Notations and Functions</a>
