--- a/NotationsFunctions/AcceleratedHierarchy.html
+++ b/NotationsFunctions/AcceleratedHierarchy.html
@@ -8,10 +8,10 @@
         Let μ be a large countable ordinal such to every limit ordinal α < μ there is assigned a fundamental sequence (a strictly increasing sequence of ordinals whose supremum is α).  A accelerated-growing hierarchy of functions h<sub>α</sub>: N → N, for α < μ, is then defined as follows:
         \(h_0(n)= n\rightarrow^nn\)<br />
         \(h_{α+1}(n) = h_{α}α\rightarrow^αα(n\rightarrow^nn)\) until n = 0, in which case, refer to the top rule.<br />
-        \(h_{a}(n) = h_{a[n\rightarrow^nn\)
-    Where the \(\uparrow\) is defined as follows:
+        \(h_{a}(n) = h_{a[n\rightarrow^nn](n\rightarrow^nn)\)<br />
+    Where the \(\uparrow\) is defined as follows:<br />
     \begin{eqnarray*} f_x \uparrow^n b(c) = \left\{ \begin{array}{ll} {f_x}^b(c) & (n = 1) \\ f_x(c) & (n > 1, b = 1) \\ f_x \uparrow^{n-1} (f_x \uparrow^{n-1} (f_x \uparrow^{n-1} (f_x \uparrow^n (b-1)(c))(c) & (n > 1, b > 1) \end{array} \right. \end{eqnarray*}
-    \(a \rightarrow b = a^{b}\)
+    \(a \rightarrow b = a^{b}\)<br />
     <br /> 
     Where the chained arrows is as follows:<br /> 
     \(f_x \rightarrow b \rightarrow c = a\uparrow^cb = f_x\underbrace{\uparrow\ldots\uparrow}_cb\) (in which up-arrow notation is used) = a[c+2]b (in which the bracket notation of hyper operator is used)<br /> 
@@ -20,11 +20,11 @@
     \(f_x \rightarrow\ldots\rightarrow b \rightarrow (c + 1) \rightarrow (d + 1) = f_x \rightarrow\ldots\rightarrow b \rightarrow (f_x \rightarrow\ldots\rightarrow b \rightarrow c \rightarrow (d + 1) ) \rightarrow d\)<br /> 
     \(a\rightarrow^1 b = a^b\)
 
-    \(a\rightarrow^x b = f(a)\rightarrow^{x-1} f(a)\rightarrow^{x-1} f(a) \ldots \rightarrow^{x-1} f(a)\) where there are \(b\rightarrow^{x-1}b\) copies of \(f(a)\), where \(f(a) = a\uparrow^aa\)
-    \(\#\rightarrow^x 1 = \#\) (here, \(\#\) denotes an arbitrarily long part of the chain before the relevant terms)
-    \(\#\rightarrow^x 1\rightarrow^y a = \#\) (the source accidentally uses two \(\rightarrow^x\) arrows implying they must be the same, but that is not required)
-    \(\#\rightarrow^n a\rightarrow^1 b = \#\rightarrow^n (\#\rightarrow^n (a-1)\rightarrow^1 b)\rightarrow^1 (b-1)\)
-    \(\#\rightarrow^n a\rightarrow^x b = \#\rightarrow^n a\rightarrow^{x-1} a\rightarrow^{x-1} a \ldots \rightarrow^{x-1} a\) where there are \(b\) copies of \(a\)
+    \(a\rightarrow^x b = f(a)\rightarrow^{x-1} f(a)\rightarrow^{x-1} f(a) \ldots \rightarrow^{x-1} f(a)\) where there are \(b\rightarrow^{x-1}b\) copies of \(f(a)\), where \(f(a) = a\uparrow^aa\)<br />
+    \(\#\rightarrow^x 1 = \#\) (here, \(\#\) denotes an arbitrarily long part of the chain before the relevant terms)<br />
+    \(\#\rightarrow^x 1\rightarrow^y a = \#\) (the source accidentally uses two \(\rightarrow^x\) arrows implying they must be the same, but that is not required)<br />
+    \(\#\rightarrow^n a\rightarrow^1 b = \#\rightarrow^n (\#\rightarrow^n (a-1)\rightarrow^1 b)\rightarrow^1 (b-1)\)<br />
+    \(\#\rightarrow^n a\rightarrow^x b = \#\rightarrow^n a\rightarrow^{x-1} a\rightarrow^{x-1} a \ldots \rightarrow^{x-1} a\) where there are \(b\) copies of \(a\)<br />
     </p>
     </body>
     <footer>
