--- a/NotationsFunctions/AcceleratedHierarchy.html
+++ b/NotationsFunctions/AcceleratedHierarchy.html
@@ -9,9 +9,9 @@
        
         \(h_0(n)= n\rightarrow^nn\)<br />
 
-        \(h_{α+1}(n) = h_{α}α\rightarrow^αα(n\rightarrow^nn)\) until n = 0, in which case, refer to the top rule.<br />
+        \(h_{\alpha+1}(n) = h_{\alpha}\alpha\rightarrow^\alpha\alpha(n\rightarrow^nn)\) until n = 0, in which case, refer to the top rule.<br />
         
-        \(h_{a}(n) = h_{a[n\rightarrow^nn](n\rightarrow^nn)\)<br />
+        \(h_{a}(n) = h_{a[n\rightarrow^nn]}(n\rightarrow^nn)\)<br />
     Where the \(\uparrow\) is defined as follows:<br />
     \begin{eqnarray*} f_x \uparrow^n b(c) = \left\{ \begin{array}{ll} {f_x}^b(c) & (n = 1) \\ f_x(c) & (n > 1, b = 1) \\ f_x \uparrow^{n-1} (f_x \uparrow^{n-1} (f_x \uparrow^{n-1} (f_x \uparrow^n (b-1)(c))(c) & (n > 1, b > 1) \end{array} \right. \end{eqnarray*}
     \(a \rightarrow b = a^{b}\)<br />
