--- a/NotationsFunctions/index.html
+++ b/NotationsFunctions/index.html
@@ -20,6 +20,7 @@
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/Delta.html">Delta!</a></h2>
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/Penguine.html">Penguin E</a></h2>
         <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/AcceleratedHierarchy.html">Accelerated Hierarchy</a></h2>
+        <h2><a href="https://penguin-number-123.github.io/NotationsFunctions/PowerfulArrow.html">Powerful Arrow</a></h2>
         
     </body>
     <script>
