--- a/NotationsFunctions/AcceleratedHierarchy.html
+++ b/NotationsFunctions/AcceleratedHierarchy.html
@@ -9,14 +9,15 @@
        
         \(h_0(n)= n\rightarrow^nn\)(<a href="https://penguin-number-123.github.io/NotationsFunctions/PowerfulArrow.html">Powerful Arrow Notation</a>)<br />
 
-        \(h_{\alpha+1}(n) = h_{\alpha}\alpha\rightarrow^\alpha\alpha(n\rightarrow^nn)\) until n = 0, in which case, refer to the top rule.<br />
+        \(h_{\alpha+1}(n) = h_{\alpha}\alpha\rightarrow^\alpha\alpha(n\rightarrow^nn)\) until n = 0, in which case, refer to the top rule.(<a href="https://penguin-number-123.github.io/NotationsFunctions/PowerfulArrow.html">Powerful Arrow Notation</a>)<br />
         
-        \(h_{\alpha}(n) = h_{a[n\rightarrow^nn]}(n\rightarrow^nn)\)<br />
+        \(h_{\alpha}(n) = h_{a[n\rightarrow^nn]}(n\rightarrow^nn)\)(<a href="https://penguin-number-123.github.io/NotationsFunctions/PowerfulArrow.html">Powerful Arrow Notation</a>)<br />
     Where the \(\uparrow\) is defined as follows:<br />
     \begin{eqnarray*} f_x \uparrow^n b(c) = \left\{ \begin{array}{ll} {f_x}^b(c) & (n = 1) \\ f_x(c) & (n > 1, b = 1) \\ f_x \uparrow^{n-1} (f_x \uparrow^{n-1} (f_x \uparrow^{n-1} (f_x \uparrow^n (b-1)(c))(c) & (n > 1, b > 1) \end{array} \right. \end{eqnarray*}
-    \(a \rightarrow b = a^{b}\)<br />
-    <br /> 
+    The [] means repeat anything inside the exponent number of times.
+
     Where the chained arrows is as follows:<br /> 
+    \(a \rightarrow b = a^{b}\)<br /> 
     \(f_x \rightarrow b \rightarrow c(d) = f_x\uparrow^cb \) (in which up-arrow notation is used)<br /> 
     \(f_x \rightarrow\ldots\rightarrow b \rightarrow 1(d) = f_x \rightarrow\ldots\rightarrow b(d)\) — When last entry is 1, it will be ignored.<br /> 
     \(f_x \rightarrow\ldots\rightarrow b \rightarrow 1 \rightarrow c(d) = f_x \rightarrow\ldots\rightarrow b(d)\)<br /> 
