--- a/Other/index.html
+++ b/Other/index.html
@@ -16,7 +16,8 @@
         </a>
       </div>
 <h1>These are some random things that I have come up with.</h1>
-<p> https://penguin-number-123.github.io/Other/mcmonalds.html</p>
+<p> <a href="https://penguin-number-123.github.io/Other/mcmonalds.html">Mcmonadl</a></p>
+<p><a href="https://penguin-number-123.github.io/Other/Googolplex.html">Googolplex in power form.</a></p>
 
 </body>
 <script>
