--- a/NotationsFunctions/Penguine.html
+++ b/NotationsFunctions/Penguine.html
@@ -17,7 +17,7 @@
 
         \(ExP\{m+1\}n = 10\uparrow^{n}n\uparrow n\) if m = 0<br />
 
-        \(ExP\{m\}n\,S_{p+1}\,q = ExP\{m\}q\,\underbrace{S_{p-1}(q\,S_{p-1}(q\cdots}_{ExP\{m\}n \,S_{p-1}s }(q)\)<br />
+        \(ExP\{m\}n\,S_{p+1}\,q = ExP\{m\}q\,\underbrace{S_{p}(q\,S_{p}(q\cdots}_{ExP\{m\}n \,S_{p}s }(q)\)<br />
 
         \(ExP\{m\}n\,S_{p+1}\,q = ExP\{m\}n\uparrow q\) when p is zero<br />
 
