--- a/NotationsFunctions/Hypertorial_Recursive.html
+++ b/NotationsFunctions/Hypertorial_Recursive.html
@@ -22,7 +22,7 @@
             3![3,3,3] = 3![2,3![2,3,3],3![2,3,3]]<br />
             3![2,3,3] = 3![1,3![1,3,3],3![1,3,3]]<br />
             3![1,3,3] = ((3!3)!3)!3<br />
-            3!3 = \(3\uparrow^32\uparrow^{3}1\)
+            3!3 = \(3\uparrow^32\uparrow^{3}1\)<br />
             and so on.
         </p>
     </body>
