--- a/Other/Googolplex.html
+++ b/Other/Googolplex.html
@@ -13,7 +13,7 @@
             }
         }
     </script>
-    <h1>This is an emulation of the googolplex(tm). We will be actually listing out one googol zeros.</h1>
+    <h1>This is an emulation of the googolplex(tm).</h1>
     <input id ="Input" type="text" value="">
     <button onclick="Submit();">Submit</button>
     <p id="out"></p>
