--- a/Numbers/index.html
+++ b/Numbers/index.html
@@ -18,7 +18,7 @@
         <h2><a href = "https://penguin-number-123.github.io/Numbers/Omegaggol.html">Omegaggol!</a></h2>
         <h2><a href ="https://penguin-number-123.github.io/Numbers/atnumbers.html">List of @ numbers using a@b fomat</a></h2>
         <h2><a href ="https://penguin-number-123.github.io/Numbers/Conham.html">Conham's number</a>
-        <h2><a href = "https://penguin-number-123.github.io/Numbers?SCNCNLCN.html"></a></h2>
+        <h2><a href = "https://penguin-number-123.github.io/Numbers/SCNCNLCN.html"></a></h2>
     </body>
     <script>
         function Responsive() {
