--- a/Numbers/SCNCNLCN.html
+++ b/Numbers/SCNCNLCN.html
@@ -9,7 +9,7 @@
         <h2>Pankicking Penguin (\(\Pi(n)\))</h2>
         <p>
             Let \(T(n, m)\) indicates the maximum sum of non-blank symbols that can be written (in the finished plane) with an n-state, m-color halting Turing machine starting from a blank tape before halting.(allowing movement in 8 cardinal directions)<br />
-            Then, define \(\Pi(n+1)) as T(n,n) if n > 0 and \(BB(10^{100}\) if n = 0.<br />
+            Then, define \(\Pi(n+1)) as T(n,n)\) if n > 0 and \(BB(10^{100}\) if n = 0.<br />
         </p>
         <h2>SCN(Small Chickies' Number)</h2>
         <p>Very simple. \(\Pi(10^{100})\)</p>
