--- a/Numbers/SCNCNLCN.html
+++ b/Numbers/SCNCNLCN.html
@@ -21,7 +21,7 @@
         We begin like before and create a Fast Iteration Hierarchy that has \(f_0(n) = \Pi(^{\Pi(n)}n)\) as its base rule.<br />
         Then, we define a function chick:<br />
         \(Chick(m+1,n) = f_n(n)\) when m = 0<br />
-        \(Chick(m+1,n) = Chick(m+1,Chick^{n}(m+1,n^n)) when m> 0.<br />
+        \(Chick(m+1,n) = Chick(m+1,Chick^{n}(m+1,n^n)) when m> 0.\)<br />
         Finally, Chickie(n)<br />
         \(Chickie(n) = Chick(n^n,n^n)\)</p>
         <p>Larger Chickies' Number = \(Chickie(10\uparrow^{10}10)\)</p>
