--- a/Numbers/index.html
+++ b/Numbers/index.html
@@ -14,10 +14,11 @@
               <i class="fa fa-bars"></i>
             </a>
           </div>
-        <h1>This is a list of my numbers</h1>
+        <h1b >This is a list of my numbers</h1>
         <h2><a href = "https://penguin-number-123.github.io/Numbers/Omegaggol.html">Omegaggol!</a></h2>
         <h2><a href ="https://penguin-number-123.github.io/Numbers/atnumbers.html">List of @ numbers using a@b fomat</a></h2>
         <h2><a href ="https://penguin-number-123.github.io/Numbers/Conham.html">Conham's number</a></h2>
+        <h2><a href ="https://penguin-number-123.github.io/Numbers/AbsoluteOmegaggol.html">Absolute Omegaggol</a></h2>
         <h2><a href = "https://penguin-number-123.github.io/Numbers/SCNCNLCN.html">SCN CN LCN</a></h2>
     </body>
     <script>
