--- a/NotationsFunctions/PowerfulArrow.html
+++ b/NotationsFunctions/PowerfulArrow.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Powerful arrow Notation and Chained variant.</h1>
         <p>
+            Note that all variables in this function are natural numbers.
             \begin{eqnarray*} a \uparrow^n b = \left\{ \begin{array}{ll} {a}^b & (n = 1) \\ a & (n > 1, b = 1) \\ [a \uparrow^{n-1} (]^{b\uparrow^{n-1}b}a \uparrow^n (b-1)) & (n > 1, b > 1) \end{array} \right. \end{eqnarray*}
             <h2>Example of reduction</h2>
             \(3\uparrow^23 = [3\uparrow^1(]^{3\uparrow^13}(3\uparrow^22) = 3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1(3\uparrow^1([3\uparrow^1]^{2\uparrow^12}(3\uparrow^21) = 3\uparrow^231 \text{in regular uparrow notation.}\)
