--- a/Frmwrk/index.html
+++ b/Frmwrk/index.html
@@ -21,7 +21,7 @@
         <br>
         <div class=".border-medium-warning">This is a demo wider border.</div>
         <br>
-        <div class=".border-wide-error">A wide border.</div">
+        <div class=".border-wide-error">A wide border.</div>
         <br>
         <div class=".border-top-error">Example top border.</div>
         <br>
