--- a/Frmwrk/index.html
+++ b/Frmwrk/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="./FrMWrk.css" type="text/css">
+        <link rel="stylesheet" href="FrMWrk.css" type="text/css" media="all" />
     </head>
     <body>
         <h1>FrMWrK.css V0.0.1 (Framework)</h1>
